<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunEveryday</string>

    <!-- 主界面 -->
    <string name="personal">个人信息</string>
    <string name="plan">查看计划</string>
    <string name="achievement">成就</string>
    <string name="history">历史记录</string>
    <string name="share">分享</string>
    <string name="run">跑步</string>
    <string name="state">设备状态</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>

    <!-- Title -->
    <string name="title_activity_achievement">AchievementActivity</string>
    <string name="title_activity_running">RunningActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_state">stateActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>

    <!-- SensorTag 状态 -->


    <!-- 设置界面 -->
    <string name="apply_voice">开启语音提示</string>
    <string name="choose_language">中文/English</string>
    <string name="app_isAlarm">开启闹铃</string>
    <string name="app_isnotify">温湿度告知</string>
    <string name="notify_summary">在状态栏显示温度、湿度</string>
    <string name="auto_connect">SensorTag自动连接</string>
    <string name="app_reset">恢复软件初始状态</string>
    <string name="app_about">关于</string>
    <string name="share_app">推荐给朋友</string>

    <!-- About Dialog -->
    <string name="about_title">关于</string>
    <string name="about_content">制作团队：TongjiFellows\n邮箱：TongjiFellows@gmail.com</string>

    <!-- Notification -->
    <string name="notify_Ticker">温湿度</string>

    <!-- Alarm Receiver -->
    <string name="alarm_title">跑步提醒</string>
    <string name="alarm_content">   开始跑步了~~~</string>
    <string name="alarm_shutdown">关闭闹钟</string>

    <!-- plan Activity -->
    <string name="planView_title">跑步计划</string>

    <!-- StateActivity -->
    <string name="nodevice">There are no SensorTags advertising within range. Please push the side button on the SensorTag to start advertising.</string>
    <string name="button_scan">Scan</string>
    <string name="image">Image</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>

    <string-array name="device_filter">
        <item>SensorTag</item>
    </string-array>

    <string name="scan_advice">The Android device is not scanning. Please tap \'Scan\' to scan for SensorTags.</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting BLE SensorTag app</string>

    <!-- Sensor names -->
    <string name="keys">Keys</string>
    <string name="acc">Accelerometer</string>
    <string name="mag">Magnetometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="hum">Humidity</string>
    <string name="bar">Barometer</string>
    <string name="tAmb">Ambience Temperature</string>
    <string name="tObj">Object Temperature</string>

    <!-- Sensor -->
    <string name="xyz3">x:\ny:\nz:\n</string>
    <string name="empty3">*\n*\n*\n</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="unitG3">g\ng\ng\n</string>
    <string name="unitT3">uT\nuT\nuT\n</string>
    <string name="empty1">*\n</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">nPA\nmeter</string>

    <!-- 成就 -->
    <string name="Number_name1">开始运动</string>
    <string name="Number_name1_exp">运动7次 开始运动 0</string>
    <string name="Number_name2">坚持运动</string>
    <string name="Number_name2_exp">运动14次 坚持运动 1</string>
    <string name="Number_name3">习惯运动</string>
    <string name="Number_name3_exp">运动30次 习惯运动 2</string>
    <string name="Number_name4">爱上运动</string>
    <string name="Number_name4_exp">运动60次 爱上运动 3</string>
    <string name="distance_name1">迈出第一步</string>
    <string name="distance_name1_exp">慢跑1公里 迈出第一步 4</string>
    <string name="distance_name2">十里桃花香</string>
    <string name="distance_name2_exp">慢跑10公里 十里桃花香 5</string>
    <string name="distance_name3">行百里者</string>
    <string name="distance_name3_exp">慢跑50公里 行百里者 6</string>
    <string name="distance_name4">千里走单骑</string>
    <string name="distance_name4_exp">慢跑500公里 千里走单骑 7</string>
    <string name="time_name1">一时半刻</string>
    <string name="time_name1_exp">运动1小时 一时半刻 8</string>
    <string name="time_name2">旦夕之间</string>
    <string name="time_name2_exp">运动10小时 旦夕之间 9</string>
    <string name="time_name3">日久月深</string>
    <string name="time_name3_exp">运动100小时 日久月深 10</string>
    <string name="time_name4">积年累月</string>
    <string name="time_name4_exp">运动500小时 积年累月 11</string>

    <!-- 主界面 -->
    <string name="main_plan">Plan</string>
    <string name="title_activity_personal">PersonalActivity</string>

    <!-- 历史界面 -->
    <string name="history_test">我的测试历程</string>
    <string name="history_today_time">今日跑步时间</string>
    <string name="history_today_distance">今日跑步里程</string>
    <string name="history_today_calories">今日消耗卡路里</string>
    <string name="history_total_time">总跑步时间</string>
    <string name="history_total_distance">总跑步里程</string>
    <string name="history_total_calories">总消耗卡路里</string>
    <string name="day">天</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="year">年</string>

</resources>